*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.31 ===
* Updated and extended interface of dspu::RingBuffer.
* Fixed crash in dspu::SpectralProcessor::clear method.

=== 1.0.30 ===
* Added MM_PEAK algorithm to MeterGraph and ScaledMeterGraph.
* Spectrum analyzer now allows to read linear-scaled frequencies and indices.
* Implemented ADSREnvelope class for ADSR envelope computation.
* Added MacOS CI builds.
* Updated module versions in dependencies.

=== 1.0.29 ===
* Optimized complex resampling algorithm for dspu::Sample.
* Implemented functions for quick computing of sine, cosine, logarithm and exponent
  with precision loss.
* Implemented linear, constant power, exponential and exponential with precision loss
  interpolation functions.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.28 ===
* Added 'listen' playback mode for the sampler in dspu::Sampler.
* Added support of build for MacOS.
* Updated module versions in dependencies.

=== 1.0.27 ===
* Implemented TruePeak meter.
* Implemented Panorama meter (Panometer).
* Implemented ScaledMeterGraph with subsampling option.
* Implemented QuantizedCounter statistics tool.
* Implemented ILUFSMeter - integrated LUFS meter.
* Several fixes and improvements in RawRingBuffer.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.26 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.25 ===
* Several updates of the dspu::LoudnessMeter module.
* Bugfixes and improvements in shared memory catalog and clients.
* Added dspu::Bypass::process_drywet method.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.24 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.23 ===
* Updated module versions in dependencies.

=== 1.0.22 ===