@@ -4,6 +4,7 @@
 
 === 1.0.31 ===
 * Updated and extended interface of dspu::RingBuffer.
+* Optimizations: dspu::MeterGraph now uses dspu::RingBuffer instead of dsp::ShiftBuffer.
 * Fixed crash in dspu::SpectralProcessor::clear method.
 
 === 1.0.30 ===
